--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
